cmake_minimum_required(VERSION 3.15)
project(Arrays)

set(CMAKE_CXX_STANDARD 20)

add_executable(Arrays01 arrays01.cpp)

add_executable(Arrays02 arrays02.cpp)

add_executable(Arrays03 arrays03.cpp)

add_executable(Arrays04 arrays04.cpp)

add_executable(Arrays05 arrays05.cpp)

add_executable(Arrays06 arrays06.cpp)

add_executable(Arrays07 arrays07.cpp)

add_executable(PaperRockScissors PaperRockScissors.cpp)

add_executable(MagicEightBall magicEightBall.cpp magicEightBallFunctions.cpp magicEightBallFunctions.hpp)